--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
+    <title>Proyecto Laboratoria 1</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
