--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Proyecto Laboratoria 1</title>
+    <title>Tu Tienda Virtual</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <h1 class="tituloPrincipal">Tu Tienda Virtual</h1>
+      <img class="logo" src="../src/imagenes/Logo.svg">
+    </header>
+    <main>
+      <div class="producto">
+        <h3>Producto</h3>
+        <p>Mouse inalambrico marca DELL</p>
+      </div>
+      <div class="descripcion">
+        <img src="../src/imagenes/mouse.jpeg">
+        <h3>Descripcion</h3>
+        <p>Configuración rápida y fácil instalación</p>
+        <p>Contenido de la caja, Mouse óptico inalámbrico WM126 de Dell, 1 batería AA, Receptor USB, Documentación</p>
+      </div>
+      <div class="precio">
+        <p>Precio: $60.000</p>
+        <p>Disponible en Stock</p>
+      </div>
+      <div class="btnPago">
+        <p>Pago hasta 12 cuotas</p>
+        <button>Pago con tarjeta de credito</button>
+      </div>
+    </main>
+    <footer>
+      <p>COPYRIGHT 2020 
+        TODOS LOS DERECHOS RESERVADOS A VIRTUAL TECH DISTRIBUCIONES S.A.S</p>
+    </footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
