--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         <button>Pago con tarjeta de credito</button>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <p>COPYRIGHT 2020 
         TODOS LOS DERECHOS RESERVADOS A VIRTUAL TECH DISTRIBUCIONES S.A.S</p>
     </footer>
