vista de 2pagina

--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,48 @@
       <img class="logo" src="../src/imagenes/Logo.svg">
     </header>
     <main>
-      <div class="producto">
-        <h3>Producto</h3>
-        <p>Mouse inalambrico marca DELL</p>
+      <section class="pantalla1">
+        <div class="producto">
+          <h3>Producto</h3>
+          <p>Mouse inalambrico marca DELL</p>
+        </div>
+        <div class="descripcion">
+          <img src="../src/imagenes/mouse.jpeg">
+          <h3>Descripcion</h3>
+          <p>Configuración rápida y fácil instalación</p>
+          <p>Contenido de la caja, Mouse óptico inalámbrico WM126 de Dell, 1 batería AA, Receptor USB, Documentación</p>
+        </div>
+        <div class="precio">
+          <p>Precio: $63.000</p>
+          <p>Disponible en Stock</p>
+        </div>
+        <div class="btnPago">
+          <p>Pago hasta 12 cuotas</p>
+          <button>Pago con tarjeta de credito</button>
+        </div>
+      </section>
+      <section>
+        <h3 class="titulo">Datos de Pagos </h3>
+        <div>
+          <p>ingrese el número de la tarjeta</p>
+          <input class="imput numero" type="numero">
+          <p>ingresa tu nombre</p>
+          <input class="imput nombre" type ="nombre del cliente">
+
+        </div>
+        <div>
+          <p>tu tarjeta es valida para comprar</p>
+
+        </div>
+        <div>
+        <button>validar</button>
       </div>
-      <div class="descripcion">
-        <img src="../src/imagenes/mouse.jpeg">
-        <h3>Descripcion</h3>
-        <p>Configuración rápida y fácil instalación</p>
-        <p>Contenido de la caja, Mouse óptico inalámbrico WM126 de Dell, 1 batería AA, Receptor USB, Documentación</p>
+      <div>
+        <button>comprar</button>
       </div>
-      <div class="precio">
-        <p>Precio: $63.000</p>
-        <p>Disponible en Stock</p>
-      </div>
-      <div class="btnPago">
-        <p>Pago hasta 12 cuotas</p>
-        <button>Pago con tarjeta de credito</button>
-      </div>
+        
+
+      </section>
     </main>
     <footer class="footer">
       <p>COPYRIGHT 2020 
