cambios en el css

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Tu Tienda Virtual</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header class="banner">
@@ -15,13 +16,13 @@
       <section class="pantalla1">
         <div class="producto">
           <h3 class="subtitulo">Producto</h3>
-          <p>Mouse inalambrico marca DELL</p>
+          <p>Mouse inalámbrico marca DELL</p>
         </div>
         <div class="descripcion">
           <img  class="mouse" src="../src/imagenes/mouse.jpeg">
         
         <div class="descrip">
-          <h3>Descripcion</h3>
+          <h3>Descripción</h3>
           <p class="centro">Configuración rápida y fácil instalación</p>
           <p class="centro">Contenido de la caja</p>
           <p class="centro"> Mouse óptico inalámbrico WM126 </p>
@@ -33,12 +34,16 @@
         </div>
         </div>
         <div class="precio">
-          <p>Precio: $63.000</p>
-          <p>Disponible en Stock</p>
+          <div class="estrella">
+            <i id="estrella" class="fa fa-star"></i>
+            <p>Precio: $63.000</p>
+          </div>
+          <p class="stock">Disponible en Stock</p>
         </div>
         <div class="btnPago">
-          <p>Pago hasta 12 cuotas</p>
-          <button>Pago con tarjeta de credito</button>
+          <img class="tarjetadecredito" src="../src/imagenes/tarjetas de credito.jpg"
+          <p id="pago">Pago hasta 12 cuotas</p>
+          <button class="boton">Pago con tarjeta de crédito</button>
         </div>
       </section>
       <section>
