2cambio del css

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
           <p class="stock">Disponible en Stock</p>
         </div>
         <div class="btnPago">
-          <img class="tarjetadecredito" src="../src/imagenes/tarjetas de credito.jpg"
-          <p id="pago">Pago hasta 12 cuotas</p>
+          <img class="tarjetadecredito" src="../src/imagenes/tarjetas de credito.jpg"/>
+          <p class="pagar">Pago hasta 12 cuotas</p>
           <button class="boton">Pago con tarjeta de crédito</button>
         </div>
       </section>
