cambios para hacer pull

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <title>Tu Tienda Virtual</title>
     <link rel="stylesheet" href="style.css" />
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-=======
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lato&family=Wendy+One&display=swap" rel="stylesheet">
->>>>>>> d7017e5e774970cc81056fa9abe3f0810b07f370
   </head>
   <body>
     <header class="banner">
@@ -27,7 +24,7 @@
           <img  class="mouse" src="../src/imagenes/mouse.jpeg">
         
         <div class="descrip">
-          <h3>Descripción</h3>
+          <h3 id="caracteristica">Descripción</h3>
           <p class="centro">Configuración rápida y fácil instalación</p>
           <p class="centro">Contenido de la caja</p>
           <p class="centro"> Mouse óptico inalámbrico WM126 </p>
