Se realiza el codigo de validacion de tarjeta

--- a/src/index.html
+++ b/src/index.html
@@ -76,12 +76,12 @@
               </div>
             </div>
           </div>
-          <button class="btnValidar">VALIDAR</button>
+          <button class="btnValidar hiden" id="btnValidar">VALIDAR</button>
         </div>
 <!--Validacion de Tarjeta-->
         <div class="validacion">
-          <p id="mensaje">Tarjeta no Valida</p>
-          <button class="btnComprar" id="mensajeBoton">Comprar</button>
+          <p id="mensaje"></p>
+          <button class="btnComprar hiden" id="mensajeBoton">COMPRAR</button>
         </div>
       </section>
     </main>
