cambios en la funcionalidad

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="banner">
-      <img class="logo" src="../src/imagenes/Logo.svg">
+      <img class="logo" src=".imagenes/Logo.svg">
       <h1 class="tituloPrincipal">Tu Tienda Virtual</h1>      
     </header>
     <main>
@@ -21,7 +21,7 @@
           <p>Mouse inalámbrico marca DELL</p>
         </div>
         <div class="descripcion">
-          <img  class="mouse" src="../src/imagenes/mouse.jpeg">
+          <img  class="mouse" src="./imagenes/mouse.jpeg">
         
         <div class="descrip">
           <h3 id="caracteristica">Descripción</h3>
@@ -43,7 +43,7 @@
           <p class="stock">Disponible en Stock</p>
         </div>
         <div class="btnPago">
-          <img class="tarjetadecredito" src="../src/imagenes/tarjetas de credito.jpg"/>
+          <img class="tarjetadecredito" src="./imagenes/tarjetas de credito.jpg"/>
           <p class="pagar">Pago hasta 12 cuotas</p>
           <button onclick="pulsarboton()" class="boton">Pago con tarjeta de crédito</button>
         </div>
@@ -54,7 +54,7 @@
         <div class="inputNumero">
           <i class="far fa-credit-card"></i>
           <label for="entradaNumero">Ingresa el número de la tarjeta</label>
-          <input type="text" class="inputNumber" id="entradaNumero" maxlength="16" oninput="enmascarador()" placeholder="#### #### #### ####">
+          <input type="text" class="inputNumber" id="entradaNumero" maxlength="16" placeholder="#### #### #### ####">
         </div>
         <div class="inputNombre">
           <i class="far fa-user"></i>
@@ -68,7 +68,7 @@
             <div class="datos">
               <div class="grupoNumero" id="numero">
                 <p class="label">NUMERO DE TARJETA</p>
-                <p id=contenedor class="label">#### #### #### ####</p>
+                <p id="contenedor" class="label">#### #### #### ####</p>
               </div>
               <div class="grupoNombre" id="nombre">
                 <p class="label">NOMBRE</p>
