--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="banner">
-      <img class="logo" src=".imagenes/Logo.svg">
+      <img class="logo" src="./imagenes/Logo.svg">
       <h1 class="tituloPrincipal">Tu Tienda Virtual</h1>      
     </header>
     <main>
@@ -45,7 +45,7 @@
         <div class="btnPago">
           <img class="tarjetadecredito" src="./imagenes/tarjetas de credito.jpg"/>
           <p class="pagar">Pago hasta 12 cuotas</p>
-          <button onclick="pulsarboton()" class="boton">Pago con tarjeta de crédito</button>
+          <button class="boton" id="botonNext">Pago con tarjeta de crédito</button>
         </div>
       </section>
 <!-- html pantalla2 --> 
@@ -72,7 +72,7 @@
               </div>
               <div class="grupoNombre" id="nombre">
                 <p class="label">NOMBRE</p>
-                <p id=name class="label">Maria Gonzalez</p>
+                <p id="name" class="label">Maria Gonzalez</p>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
       <p>COPYRIGHT 2020 
         TODOS LOS DERECHOS RESERVADOS A VIRTUAL TECH DISTRIBUCIONES S.A.S</p>
     </footer>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="index.js" type="module"></script>
     <script src="https://kit.fontawesome.com/826275d0c9.js" crossorigin="anonymous"></script>
   </body>
 </html>
