Se adiciona una tercera pagina para compra exitosa, se elimina sweetalert

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,14 @@
           <button class="btnComprar hiden" id="botonComprar">COMPRAR</button>
         </div>
       </section>
+      <section class="pantalla3" id="pantalla3">
+        <div class="msjExitoso">
+          <img class="gif">
+          <h2 class="msjCompra">Compra Exitosa</h2>
+          <p class="msjEnvio">Pronto le enviaremos el producto</p>
+          <button class="compraExitosa">OK</button>
+        </div>
+      </section>
     </main>
 <!--footer-->
     <footer class="footer">
@@ -92,6 +100,6 @@
     </footer>
     <script src="index.js" type="module"></script>
     <script src="https://kit.fontawesome.com/826275d0c9.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
