--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head >
     <meta charset="utf-8">
-    <title> TU TIENDA VIRTUAL</title>
+    <title>Tu Tienda Virtual</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lato&family=Wendy+One&display=swap" rel="stylesheet">
@@ -93,6 +93,5 @@
     <script src="index.js" type="module"></script>
     <script src="https://kit.fontawesome.com/826275d0c9.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
