css de pantalla3 con su funcionalidad

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
           <p class="stock">Disponible en Stock</p>
         </div>
         <div class="btnPago">
-          <img class="tarjetadecredito" src="./imagenes/tarjetas de credito.jpg"/>
+          <img class="tarjetadecredito" src="./imagenes/tarjetas de credito.jpg">
           <p class="pagar">Pago hasta 12 cuotas</p>
           <button class="boton" id="botonNext">Pago con tarjeta de crédito</button>
         </div>
@@ -84,12 +84,13 @@
           <button class="btnComprar hiden" id="botonComprar">COMPRAR</button>
         </div>
       </section>
+ <!--pantalla 3-->
       <section class="pantalla3" id="pantalla3">
         <div class="msjExitoso">
-          <img class="gif">
-          <h2 class="msjCompra">Compra Exitosa</h2>
-          <p class="msjEnvio">Pronto le enviaremos el producto</p>
-          <button class="compraExitosa">OK</button>
+          <img class="gif" src="./imagenes/checklist.gif">
+          <h2 class="msjCompra" id="compraExitosa" >Compra Exitosa</h2>
+          <p class="msjEnvio">Pronto le enviaremos su producto</p>
+          <button class="compraExitosa" id="compraExitosa">OK</button>
         </div>
       </section>
     </main>
@@ -100,6 +101,5 @@
     </footer>
     <script src="index.js" type="module"></script>
     <script src="https://kit.fontawesome.com/826275d0c9.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
