--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
       <section class="pantalla3" id="pantalla3">
         <div class="msjExitoso">
           <img class="gif" src="./imagenes/checklist.gif">
-          <h2 class="msjCompra" id="compraExitosa" >Compra Exitosa</h2>
+          <h2 class="msjCompra" >Compra Exitosa</h2>
           <p class="msjEnvio">Pronto le enviaremos su producto</p>
           <button class="compraExitosa" id="compraExitosa">OK</button>
         </div>
