--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,12 @@
         <div class="inputNumero">
           <i class="far fa-credit-card"></i>
           <label for="entradaNumero">Ingresa el número de la tarjeta</label>
-          <input type="text" class="inputNumber" id="entradaNumero" maxlength="16" placeholder="#### #### #### ####">
+          <input type="text" class="inputNumber" id="entradaNumero" maxlength="16" placeholder="NUMERO">
         </div>
         <div class="inputNombre">
           <i class="far fa-user"></i>
           <label for="entradaNombre">Ingresa tu nombre</label>
-          <input type="text" class="inputName" id="entradaNombre" maxlength="19" placeholder= "----------------">
+          <input type="text" class="inputName" id="entradaNombre" maxlength="19" placeholder= "NOMBRE">
         </div>
 <!--Contenedor tarjeta-->
         <div  class="grupoValidar">
@@ -88,7 +88,7 @@
       <section class="pantalla3" id="pantalla3">
         <div class="msjExitoso">
           <img class="gif" src="./imagenes/checklist.gif">
-          <h2 class="msjCompra" id="compraExitosa" >Compra Exitosa</h2>
+          <h2 class="msjCompra">Compra Exitosa</h2>
           <p class="msjEnvio">Pronto le enviaremos su producto</p>
           <button class="compraExitosa" id="compraExitosa">OK</button>
         </div>
